[tool.poetry]
name = "license-collector"
version = "0.1.0"
description = ""
authors = ["cmdoret"]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
prefect = "^2.7.6"
pandas = "^1.5.2"
prefect-jupyter = "^0.2.0"
interrogate = "^1.5.0"
joblib = "^1.2.0"
black = "^22.12.0"
gimie = "^0.2.0"
networkx = "^3.0"
setuptools = "^66.1.1"
wheel = "^0.38.4"
jupyter = "^1.0.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''

[tool.pyright]
reportMissingTypeStubs = false
reportUnknownVariableType = "none"
reportGeneralTypeIssues = "none"
