[tool.poetry]
name = "license-collector"
version = "0.1.0"
description = ""
authors = ["cmdoret"]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
prefect = "^2.11"
black = "^22.12.0"
gimie = "^0.5.0"
setuptools = "^66.1.1"
pandas = "^2.0.3"
more-itertools = "^10.1.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''

[tool.pyright]
reportMissingTypeStubs = false
reportUnknownVariableType = "none"
reportGeneralTypeIssues = "none"
